src/compose/tests/invalid_identifiers/const.wgsl
#define_import_path consts

pub const fine: f32 = 1.0;
pub const bad_: f32 = 1.0;
